Fix wrapping issue with the stacked file browse button

--- a/css/border-image-generator.css
+++ b/css/border-image-generator.css
@@ -125,7 +125,9 @@
 }
 
 .fileInput > input[type='file'] {
-    position: relative;
+    position: absolute;
+    top: 0px;
+    left: 0px;
     text-align: right;
     opacity: 0;
     z-index: 2;
